--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -1,17 +1,73 @@
 {% load socialaccount %}
-<html>
 
-<body>
-    <h1>Welcome to WhateverOurAppIsCalled!</h1>
+{% block title %}
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <title>WhateverOurAppisCalled</title>
+</head>
+{% endblock title %}
+
+{% block header %}
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand">WhateverOurAppIsCalled</a>
     {% if user.is_authenticated %}
-    <p>Welcome, {{ user.username }} </p>
-
-    <a href="{% url 'upper' %}">Record an Upper Body Workout!</a>
-
-    {% else %}
-    <a href="{% provider_login_url 'google' %}">Login With Google</a>
+    <div class="collapse navbar-collapse">
+        <div class="navbar-nav">
+            <a class="nav-item nav-link" href="{% url 'index' %}">Home</a>
+        </div>
+        <span class="navbar-text">
+            Welcome, {{ user.username }}
+        </span>
+    </div>
     {% endif %}
-</body>
+</nav>
+{% endblock header %}
 
-</html>
+{% block content %}
+
+<div style="min-height:85vh">
+
+    <body>
+        {% if user.is_authenticated %}
+
+        <div class="d-flex justify-content-center">
+            <a href="{% url 'cardio' %}">Record a Cardio Workout!</a>
+            <a href="{% url 'upper' %}">Record an Upper Body Workout!</a>
+            <a href="{% url 'lower' %}">Record an Lower Body Workout!</a>
+        </div>
+
+        {% else %}
+        <a href="{% provider_login_url 'google' %}">Login With Google</a>
+        {% endif %}
+    </body>
+</div>
+
+
+{% endblock content %}
+
+{% block footer %}
+<footer class="bg-light text-center text-lg-start">
+    <div class="navbar navbar-inverse navbar-static-bottom">
+        <div class="navbar-text pull-left">
+            Author: a-14
+        </div>
+        <div class="navbar-text pull-left">
+            &copy; a-14, 2021
+        </div>
+    </div>
+</footer>
+{% endblock footer %}
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
