Remove error in formatting

--- a/index/templates/index/cardio_list.html
+++ b/index/templates/index/cardio_list.html
@@ -10,7 +10,7 @@
     {% for data in cardio_querey_list %}
 		<div class="list-group-item flex-column">
             <h5 class="mb-1">Type: {{ data.type }}</p>
-			<p class="mb-1">Time: {{ data.time }}</h5>
+			<p class="mb-1">Time: {{ data.time }}</p>
 			<p class="mb-1">Distance: {{ data.distance }}</p>
 			<p class="mb-1">Date: {{ data.date }}</p>
 		</div>
