--- a/index/templates/index/lower_list.html
+++ b/index/templates/index/lower_list.html
@@ -10,7 +10,7 @@
     {% for data in lower_querey_list %}
 		<div class="list-group-item flex-column">
             <h5 class="mb-1">Type: {{ data.type }}</p>
-			<p class="mb-1">Sets: {{ data.sets }}</h5>
+			<p class="mb-1">Sets: {{ data.sets }}</p>
 			<p class="mb-1">Reps: {{ data.reps }}</p>
 			<p class="mb-1">Date: {{ data.date }}</p>
 		</div>
