--- a/index/templates/index/cardio_list.html
+++ b/index/templates/index/cardio_list.html
@@ -3,16 +3,21 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+<style>
+	h4 {
+	font-weight: normal;
+	}
+</style>
 
 <h1 class="d-flex justify-content-center">Cardio Workouts List:</h1>
 
 <div class="container text-center">
     {% for data in cardio_querey_list %}
 		<div class="list-group-item flex-column">
-            <h5 class="mb-1">Type: {{ data.type }}</p>
-			<p class="mb-1">Time: {{ data.time }}</p>
-			<p class="mb-1">Distance: {{ data.distance }}</p>
-			<p class="mb-1">Date: {{ data.date }}</p>
+            <h3>Type: {{ data.type }}</h3>
+			<h4>Time: {{ data.time }}</h4>
+			<h4>Distance: {{ data.distance }}</h4>
+			<h4>Date: {{ data.date }}</h4>
 		</div>
 	{% endfor %}
 </div>
