--- a/index/templates/index/upper_list.html
+++ b/index/templates/index/upper_list.html
@@ -4,15 +4,20 @@
 
 {% block content %}
 
+<style>
+	h4 {
+	font-weight: normal;
+	}
+</style>
 <h1 class="d-flex justify-content-center">Upper Body Workouts List:</h1>
 
 <div class="container text-center">
     {% for data in upper_querey_list %}
 		<div class="list-group-item flex-column">
-            <h5 class="mb-1">Type: {{ data.type }}</p>
-			<p class="mb-1">Time: {{ data.time }}</p>
-			<p class="mb-1">Distance: {{ data.distance }}</p>
-			<p class="mb-1">Date: {{ data.date }}</p>
+            <h3>Type: {{ data.type }}</h3>
+			<h4>Sets: {{ data.sets }}</h4>
+			<h4>Reps: {{ data.reps }}</h4>
+			<h4>Date: {{ data.date }}</h4>
 		</div>
 	{% endfor %}
 </div>
