--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -13,7 +13,7 @@
 
 {% block header %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">WhateverOurAppIsCalled</a>
+    <a class="navbar-brand">Exercise Gamification</a>
     {% if user.is_authenticated %}
     <div class="collapse navbar-collapse">
         <div class="navbar-nav">
