Add logout to nav-bar

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -22,6 +22,7 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'index' %}">Home</a>
+                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
         </ul>
         <span class="form-inline navbar-text" style="color:white">
