--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -19,15 +19,16 @@
     <a class="navbar-brand">Exercise Gamification</a>
     {% if user.is_authenticated %}
     <div class="collapse navbar-collapse">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'index' %}">Home</a>
-                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-            </li>
-        </ul>
         <span class="form-inline navbar-text" style="color:white">
             Welcome, {{ user.username }}
         </span>
+        <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'index' %}">Home</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+            </li>
     </div>
     {% endif %}
 </nav>
