--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Exercise Gamification</title>
+    <style>
+    :root { --pct:{{pct_to_next_level}}%}
+    </style>
 </head>
 {% endblock title %}
 
@@ -39,11 +42,20 @@
 
 <div style="min-height:85vh">
 
+    
+
     <body>
         {% if user.is_authenticated %}
 
-        <div class="d-flex justify-content-center" style="padding:3vh">progress bar here</div>
-        <div class="d-flex justify-content-center" style="padding:3vh">Total Points: {{total_points}}</div>
+        <!-- progress bar -->
+    </br>
+        <div class="d-flex justify-content-center" style="padding:3vh; font-weight: bold; font-size: larger;">Level {{curr_level}} ({{total_points}} / {{pts_to_next_level}})</div>
+
+        <div class="progress" style="height: 30px">
+            <!-- TODO: Change "width" to correct pct -->
+            <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="1000" style= width:var(--pct);>{{pct_to_next_level}}%</div>
+        </div>
+
 
         <div class="dropdown d-flex justify-content-center" style="margin-bottom:10vh; padding:2vh">
             <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown"
