social page link added to navbar

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -31,8 +31,12 @@
                 <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'social' %}">Social</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
+        </ul>
     </div>
     {% endif %}
 </nav>
