Add link to database_list in nav-bar

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -31,6 +31,9 @@
                 <a class="nav-link" href="{% url 'index' %}">Home</a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'database_list' %}">Leaderboard All</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
             </li>
     </div>
