--- a/index/templates/index/database_list.html
+++ b/index/templates/index/database_list.html
@@ -1,15 +1,18 @@
 {% extends "index/index.html" %}
 {% block content %}
 
-<div class="list-group">
-	{% csrf_token %}
-	{% for user in database_list %}
-		<div class="list-group-item flex-column">
-			<h5 class="mb-1">User: {{ user.user }}</h5>
-			<p class="mb-1">Points: {{ user.points }}</p>
-		</div>
-		<br>
-	{% endfor %}
+<div class="container text-center">
+	<div class="list-group">
+		{% csrf_token %}
+		{% for user in database_list %}
+			<div class="list-group-item flex-column">
+				<h4>User: {{ user.user }}</h4>
+				<h4>Points: {{ user.points }}</h4>
+				<h4>Level: {{ user.level }}</h4>
+			</div>
+			<br>
+		{% endfor %}
+	</div>
 </div>
 
 {% endblock content %}
