--- a/index/templates/index/database_list.html
+++ b/index/templates/index/database_list.html
@@ -1,16 +1,16 @@
 {% extends "index/index.html" %}
 {% block content %}
 
-<div class="container text-center">
+<div class="container text-center" style="min-height:85vh">
 	<div class="list-group">
 		{% csrf_token %}
 		{% for user in database_list %}
-			<div class="list-group-item flex-column">
-				<h4>User: {{ user.user }}</h4>
-				<h4>Points: {{ user.points }}</h4>
-				<h4>Level: {{ user.level }}</h4>
-			</div>
-			<br>
+		<div class="list-group-item flex-column">
+			<h4>User: {{ user.user }}</h4>
+			<h4>Points: {{ user.points }}</h4>
+			<h4>Level: {{ user.level }}</h4>
+		</div>
+		<br>
 		{% endfor %}
 	</div>
 </div>
