--- a/index/templates/index/social.html
+++ b/index/templates/index/social.html
@@ -46,7 +46,7 @@
                 <div class="card" style="width:12vw; margin:3px">
                     <div class="card-body">
                         <script>
-                            const email = data.from_user.email
+                            email = data.from_user.email
                         </script>
                         <h5 class=card-title>{{data.from_user.username}}</h5>
                         <p class="card-subtitle">Email: {{data.from_user.email}}</p>
