fixed page heights

--- a/index/templates/index/rejected.html
+++ b/index/templates/index/rejected.html
@@ -2,7 +2,7 @@
 {% load friendshiptags %}
 {% block content %}
 
-<div>
+<div style="min-height:85vh">
     <p>Rejected {{friend}}'s Friend Request </p>
     <a href="{% url 'social' %}">Return to Social Page</a>
 </div>
