--- a/index/templates/index/cardio_form.html
+++ b/index/templates/index/cardio_form.html
@@ -3,7 +3,32 @@
 {% block content %}
 
 <div style="min-height:85vh">
+    <style>
+        img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+        margin-top: 25px;
+        }
+
+        figure figcaption{
+            text-align: center;
+        }
+    
+    </style>
     <h1 class="d-flex justify-content-center">Record a Cardio Workout!</h1>
+
+    <figure>
+
+        <img src="../../../staticfiles/admin/img/RunningAnatomy.png" alt="Running Anatomy" width="500" height="300">
+        <figcaption>Runnning Tips:
+            <br>Relax your shoulders
+            <br>Set a rhythm by swinging your arms
+            <br>Maintain deep abdominal breathing
+        </figcaption>
+
+    </figure>
 
     <form method="post">{% csrf_token %}
         {{ form.as_p }}
