--- a/index/templates/index/upperbody_form.html
+++ b/index/templates/index/upperbody_form.html
@@ -3,7 +3,34 @@
 {% block content %}
 
 <div style="min-height:85vh">
+    <style>
+        img {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 10px;
+        margin-top: 25px;
+        }
+
+        figure figcaption{
+            text-align: center;
+        }
+    
+    </style>
+   
+     
     <h1 class="d-flex justify-content-center">Record a Upper Body Workout!</h1>
+
+    <figure>
+
+        <img src="../../../staticfiles/admin/img/PushupAnatomy.png" alt="Pushup Anatomy" width="500" height="300">
+        <figcaption>Pushup Tips:
+            <br>Make sure your neck and spine are aligned
+            <br>Don't shrug your shoulders
+            <br>Remember to breathe
+        </figcaption>
+
+    </figure>
 
     <form method="post">{% csrf_token %}
         {{ form.as_p }}
