--- a/index/templates/index/cardio_form.html
+++ b/index/templates/index/cardio_form.html
@@ -5,12 +5,14 @@
 {% block content %}
 
 <div style="min-height:85vh">
+    <br>
     <h1 class="d-flex justify-content-center">Record a Cardio Workout!</h1>
-
-    <form method="post">{% csrf_token %}
-        {{ form | crispy}}
-        <input type="submit" value="Create" />
-    </form>
+    <div style="margin: 20px 60px 20px 60px;">
+        <form method="post">{% csrf_token %}
+            {{ form | crispy}}
+            <input type="submit" value="Create" />
+        </form>
+    </div>  
 </div>
 
 <!-- <div style="min-height:85vh">
@@ -41,23 +43,5 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div> -->
-
-
-<!-- <form>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-    </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
-    </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-  </form> -->
 
 {% endblock content %}
