--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -93,7 +93,7 @@
         </script>
 
         <!-- weather begins here -->
-        <nav class="row" style="background: green; color: white;">
+        <!-- <nav class="row" style="background: green; color: white;">
             <h1 class="col-md-3 text-center">weather</h1>
         </nav>
         <br />
@@ -109,17 +109,17 @@
                 </button>
                 </div>
                 <form>
-        </center>
-        <div class="row">
+        </center> -->
+        <div class="row" style="margin:5vh;">
             {% if country_code and coordinate and temp and pressure and humidity %}
-            <div class="col-md-6 col-md-offset-3">
+            <h3>{{precipitation}}</h3>
+            <!-- <div class="col-md-6 col-md-offset-3">
             <h3>country code : {{country_code}}</h1>
                 <h5>coordinate : {{coordinate}}</h5>
                 <h5>temp : {{temp}}</h5>
                 <h5>pressure : {{pressure}} </h5>
                 <h5>humidity : {{humidity}}</h5>
-                
-            </div>
+            </div> -->
             {% endif %}
         </div>
 
