--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -92,6 +92,9 @@
             }
         </script>
 
+        <div style="margin:5vh;">
+            <h3 style="padding-bottom:8px;">Weather: {{precipitation}}</h3>
+        </div>
         <!-- weather begins here -->
         <!-- <nav class="row" style="background: green; color: white;">
             <h1 class="col-md-3 text-center">weather</h1>
@@ -110,18 +113,18 @@
                 </div>
                 <form>
         </center> -->
-        <div class="row" style="margin:5vh;">
+        <!-- <div class="row" style="margin:5vh;">
             {% if country_code and coordinate and temp and pressure and humidity %}
             <h3>{{precipitation}}</h3>
-            <!-- <div class="col-md-6 col-md-offset-3">
+            <div class="col-md-6 col-md-offset-3">
             <h3>country code : {{country_code}}</h1>
                 <h5>coordinate : {{coordinate}}</h5>
                 <h5>temp : {{temp}}</h5>
                 <h5>pressure : {{pressure}} </h5>
                 <h5>humidity : {{humidity}}</h5>
-            </div> -->
+            </div>
             {% endif %}
-        </div>
+        </div> -->
 
 
         <div style="margin:5vh;">
