displays all key weather information in charlottesville, instead of just precipitation

--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -93,7 +93,12 @@
         </script>
 
         <div style="margin:5vh;">
-            <h3 style="padding-bottom:8px;">Weather: {{precipitation}}</h3>
+            <h3 style="padding-bottom:8px;">Charlottesville Weather:</h3>
+            <h5>{{weather}}</h5>
+            <h5>Temperature: {{temp}}</h5>
+            <h5>Humidity: {{humidity}}</h5>
+            <h5>Wind: {{wind}}</h5>
+            <h5>{{precipitation}}</h5>
         </div>
         <!-- weather begins here -->
         <!-- <nav class="row" style="background: green; color: white;">
